Fix text alignment in code blocks

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -449,12 +449,8 @@ Small Device Styles
 Original
 *******************************************************************************/
 
-figure > * {
+.centerfig > * {
   margin: 0 auto 0.55em;
   display: block;
   text-align: center;
-}
-
-figure.highlight {
-  text-align: left;
 }
